--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
   },
   "homepage": "https://github.com/BieAnimaton/Image-Uploader-NodeJs-MongoDB#readme",
   "dependencies": {
+    "alert": "^5.0.10",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.3",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
-    "express": "^4.17.1",
+    "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "mongoose": "^5.10.10",
     "multer": "^1.4.2"
   },
